Bug 242350 replace LL_INIT(0,-1) with LL_MAXUINT patch by Zbigniew Braniecki <gandalf@firefox.pl> r=biesi sr=darin