xpfe/components/directory/nsDirectoryViewer.cpp
@@ -481,7 +481,7 @@ nsHTTPIndex::OnIndexAvailable(nsIRequest* aRequest, nsISupports *aContext,
       PRInt64 size;
       rv = aIndex->GetSize(&size);
       if (NS_FAILED(rv)) return rv;
-      if (LL_NE(size, LL_INIT(0, -1))) {
+      if (LL_NE(PRUint64(size), LL_MAXUINT)) {
         PRInt32 intSize;
         LL_L2I(intSize, size);
         // XXX RDF should support 64 bit integers (bug 240160)
